# nhl-first-goalscorer

./: .gitignore  CHANGELOG.md  LICENSE  README.md  check_schedule.py  index.html  pyproject.toml  requirements-dev.txt  requirements-ml.txt
.github/workflows/: daily_picks.yml  pages.yml  retrain.yml  tests.yml  train_model.yml
anytime/: 2026-03-22.json
data/: .gitkeep  accuracy_log.jsonl  ml_model.pkl  ml_scaler.pkl
docs/: index.html
nhl_predictor/: __init__.py  api.py  cli.py  features.py  model.py  predict.py  scraper.py  tracker.py  train.py
picks/: .gitkeep  2026-02-27.json  2026-02-28.json  2026-03-01.json  2026-03-02.json  2026-03-03.json  2026-03-04.json  2026-03-05.json  2026-03-06.json  2026-03-07.json  2026-03-08.json  2026-03-09.json  2026-03-10.json  2026-03-11.json  2026-03-12.json  2026-03-13.json  2026-03-14.json  2026-03-15.json  2026-03-16.json  2026-03-17.json  2026-03-18.json  2026-03-19.json  2026-03-20.json  2026-03-21.json  2026-03-22.json
scripts/: smoke_test.py
tests/: test_model.py
