[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "nhl-first-goalscorer"
version = "2.0.0"
description = "Daily NHL first goalscorer prediction model — heuristic + ML ensemble"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "requests>=2.31.0",
    "numpy>=1.26.0",
]

[project.optional-dependencies]
ml = [
    "scikit-learn>=1.4.0",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "black>=24.0",
    "scikit-learn>=1.4.0",
]

[project.scripts]
nhl-picks = "nhl_predictor.cli:main"

[tool.pytest.ini_options]
testpaths   = ["tests"]
python_files = ["test_*.py"]
addopts     = "-v --tb=short"

[tool.black]
line-length = 100
target-version = ["py311", "py312"]
skip-string-normalization = true

[tool.coverage.run]
source = ["nhl_predictor"]
omit   = ["tests/*"]
